--- a/wayzi-spring-react/wayzi-backend/src/main/resources/application.properties
+++ b/wayzi-spring-react/wayzi-backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=wayzi
+spring.profiles.active=h2
+spring.mvc.hiddenmethod.filter.enabled=true
+
+openrouteservice.api.key=5b3ce3597851110001cf6248461f73740e4c4657a58083b78cd3ea42
