--- a/wayzi-spring-react/wayzi-frontend/package.json
+++ b/wayzi-spring-react/wayzi-frontend/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.0.1",
     "@mui/lab": "^7.0.0-beta.11",
     "@mui/material": "^7.0.2",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
