chore(frontend): Add qrcode.react dependency

--- a/wayzi-spring-react/wayzi-frontend/package.json
+++ b/wayzi-spring-react/wayzi-frontend/package.json
@@ -15,16 +15,20 @@
     "@hookform/resolvers": "^5.0.1",
     "@mui/lab": "^7.0.0-beta.11",
     "@mui/material": "^7.0.2",
+    "@mui/styled-engine-sc": "^7.0.2",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
+    "styled-components": "^6.1.17",
     "zod": "^3.24.3"
   },
   "devDependencies": {
