feature(backend): Add MapController with directions API integration

--- a/wayzi-spring-react/wayzi-backend/src/main/resources/application.properties
+++ b/wayzi-spring-react/wayzi-backend/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.profiles.active=h2
 spring.mvc.hiddenmethod.filter.enabled=true
 
 jwt.secret.key=${JWT_SECRET_KEY}
+openrouteservice.api.key=${ORS_API_KEY}
