--- a/wayzi-spring-react/wayzi-frontend/package.json
+++ b/wayzi-spring-react/wayzi-frontend/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.55.0",
     "react-leaflet": "^5.0.0-rc.2",
     "react-redux": "^9.2.0",
+    "react-responsive-modal": "^6.4.2",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
     "styled-components": "^6.1.17",
