--- a/wayzi-backend/src/main/resources/application.properties
+++ b/wayzi-backend/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 jwt.secret.key=${JWT_SECRET_KEY}
 openrouteservice.api.key=${ORS_API_KEY}
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${mail_username}
+spring.mail.password=${mail_password}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
