--- a/wayzi-backend/src/main/resources/application.properties
+++ b/wayzi-backend/src/main/resources/application.properties
@@ -9,5 +9,9 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${mail_username}
 spring.mail.password=${mail_password}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+
+frontend.app.base-url=http://localhost:5173
+
+logging.level.org.springframework.mail=DEBUG
+logging.level.com.sun.mail=DEBUG
+
