--- a/wayzi-backend/src/main/resources/application-prod.properties
+++ b/wayzi-backend/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/e-shop
-spring.datasource.username=wp
-spring.datasource.password=wp123
+spring.datasource.url=jdbc:postgresql://localhost:5433/wayzi-db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 
 ## default connection pool
