--- a/wayzi-backend/src/test/resources/application.properties
+++ b/wayzi-backend/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=wayzi
-spring.profiles.active=prod
+spring.profiles.active=h2
 spring.mvc.hiddenmethod.filter.enabled=true
 
 jwt.secret.key=${JWT_SECRET_KEY}
